fix date contrast

--- a/style.scss
+++ b/style.scss
@@ -188,7 +188,7 @@ img {
 }
 
 .date {
-  color: $gray;
+  color: #867a7a;
   margin-left: 9px;
   font-size: 14px;
 }
